--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
   <body>
     <h1>Personal Laboratoria</h1>
     <div id="personal">
-
     </div>
-
+    <script src= "assets/js/app.js"></script>
   </body>
 </html>
