--- a/index.html
+++ b/index.html
@@ -2,12 +2,15 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="assets/css/app.css">
+
     <title>Personal Laboratoria</title>
   </head>
   <body>
     <h1>Personal Laboratoria</h1>
     <div id="personal">
-    </div>
     <script src= "assets/js/app.js"></script>
+  </div>
+
   </body>
 </html>
